--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,6 +25,7 @@ a {
     text-align: center;
     font-size: 12px;
     user-select: none;
+    border-bottom: 1px solid #000;
 }
 .text-avatar {
     display: inline-block;
